--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,8 @@ authors = ["Uploadcare Inc <hello@uploadcare.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 Django = "^3.2.8"
-pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "feature/slicable-resource-lists"}
 django-crispy-forms = "^1.13.0"
+pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "fix/upload-url"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
