Use pyuploadcare v4.0.0 with REST API v0.7 updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,19 +1,19 @@
 [tool.poetry]
 name = "pyuploadcare-example"
-version = "0.1.0"
+version = "0.2.0"
 description = "Example project for Python library for Uploadcare.com"
 authors = ["Uploadcare Inc <hello@uploadcare.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = "^3.8"
 Django = "^3.2.8"
 django-crispy-forms = "^1.13.0"
-pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "master"}
+pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "release/v4.0.0"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
 mypy = "^0.910"
-black = "^21.9b0"
+black = "^22.3"
 isort = "^5.9.3"
 
 [build-system]
@@ -32,6 +32,7 @@ exclude = '''
   |\.nox
   |\.tox
   |\.venv
+  |venv
   |_build
   |buck-out
   |build
