--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ authors = ["Uploadcare Inc <hello@uploadcare.com>"]
 python = "^3.8"
 Django = "^3.2.8"
 django-crispy-forms = "^1.13.0"
-pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "main"}
+pyuploadcare = {git = "https://github.com/uploadcare/pyuploadcare", rev = "bugfix/260-allow_dicts_for_addon_execution_params"}
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.1"
